# emoclassifiers

./: README.md  pyproject.toml  requirements.txt
assets/definitions/: emoclassifiers_v1_definition.json  emoclassifiers_v1_top_level_definition.json  emoclassifiers_v2_definition.json
emoclassifiers/: aggregation.py  chunking.py  classification.py  io_utils.py  prompt_templates.py
emoclassifiers/assets/: example_conversations.jsonl
emoclassifiers/assets/definitions/: emoclassifiers_v1_dependency.json
examples/: run_hierarchical_emoclassifiers_v1.py  run_simple_classification.py  run_social_classifiers.py
