[project]
name = "emoclassifiers"
version = "0.1.0"
description = "EmoClassifiers by OpenAI"
authors = [
    { name = "Rodrigo Bermudez Schettino", email = "rodrigobdz@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["openai>=1.51.0"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "emoclassifiers" }, { include = "assets" }]
